- fixed a bug with reading miriad tables subroutine - fixed importing lib in tutorials - added notebook for plotting bandpass solutions

--- a/ipython-notebooks/commissioning/01/Bandpass_stability.ipynb
+++ b/ipython-notebooks/commissioning/01/Bandpass_stability.ipynb
@@ -11,8 +11,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "root - INFO : Logging started!\n",
-      "root - INFO : To see the log in a bash window use the following command:\n",
+      "root - INFO : Logging started!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "root - INFO : To see the log in a bash window use the following command:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "root - INFO : tail -n +1 -f /home/adebahr/apercal/ipython-notebooks/commissioning/APERTIF/Bandpass_stability.log\n"
      ]
     },
@@ -27,7 +39,7 @@
    "source": [
     "%config IPCompleter.greedy=True\n",
     "%matplotlib notebook\n",
-    "import lib\n",
+    "import libs.lib as lib\n",
     "lib.setup_logger('info', logfile='/home/adebahr/apercal/ipython-notebooks/commissioning/APERTIF/Bandpass_stability.log')\n",
     "import apercal"
    ]
@@ -252,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
