--- a/ipython-notebooks/tutorials/0 - Introduction.ipynb
+++ b/ipython-notebooks/tutorials/0 - Introduction.ipynb
@@ -50,7 +50,7 @@
     "%config IPCompleter.greedy=True\n",
     "\n",
     "# Before we initialise APERCAL we need to import the lib module to enable the logger.\n",
-    "import lib\n",
+    "import libs.lib as lib\n",
     "# The log file should point to the directory you are reducing the data in. So change this path to your apercal distribution.\n",
     "lib.setup_logger('info', logfile='/home/adebahr/apercal/ipython-notebooks/tutorials/logs/0.log')\n",
     "\n",
