--- a/ipython-notebooks/tutorials/1 - Calibration and imaging of a central APERTIF beam.ipynb
+++ b/ipython-notebooks/tutorials/1 - Calibration and imaging of a central APERTIF beam.ipynb
@@ -49,7 +49,7 @@
     "# Remember to change all the directory paths to your own ones\n",
     "%config IPCompleter.greedy=True\n",
     "%matplotlib notebook\n",
-    "import lib\n",
+    "import libs.lib as lib\n",
     "lib.setup_logger('info', logfile='/home/adebahr/apercal/ipython-notebooks/tutorials/logs/1.log')\n",
     "import apercal"
    ]
@@ -257,6 +257,7 @@
    "source": [
     "# We want to derive a bandpass and apply it to the data before we use aoflagger (parameter preflag_aoflagger_bandpass = True)\n",
     "# This bandpass will not be used in later stages of the calibration process and helps aoflagger to distinguish between bandpass effects and real RFI better\n",
+    "# There will be an error message at the end of the step which you can ignore\n",
     "preflag.aoflagger_bandpass()"
    ]
   },
@@ -267,7 +268,6 @@
    "outputs": [],
    "source": [
     "# Execute the aoflagger substep now\n",
-    "# There will be an error message at the end of the step which you can ignore\n",
     "preflag.aoflagger_flag()"
    ]
   },
