--- a/ipython-notebooks/tutorials/2 - Calibration and imaging of several APERTIF element beams.ipynb
+++ b/ipython-notebooks/tutorials/2 - Calibration and imaging of several APERTIF element beams.ipynb
@@ -49,7 +49,7 @@
     "# Remember to change all the directory paths to your own ones\n",
     "%config IPCompleter.greedy=True\n",
     "%matplotlib notebook\n",
-    "import lib\n",
+    "import libs.lib as lib\n",
     "lib.setup_logger('info', logfile='/home/adebahr/apercal/ipython-notebooks/tutorials/logs/2.log')\n",
     "import apercal"
    ]
