--- a/ipython-notebooks/tutorials/0 - Introduction.ipynb
+++ b/ipython-notebooks/tutorials/0 - Introduction.ipynb
@@ -16,15 +16,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os;\n",
-    "myusername = os.environ['USER']\n",
-    "if not ('PYTHONPATH' in os.environ and\n",
-    "        '/home/' + myusername + '/apercal' in os.environ['PYTHONPATH']):\n",
-    "      print(\"WARNING: your apercal directory should be in the $PYTHONPATH\")"
+    "import os\n",
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "here = os.path.abspath(os.curdir)\n",
+    "root = os.path.abspath(here + '/../..')\n",
+    "sys.path.append(root)\n",
+    "config = here + '/cfg/0.cfg'"
    ]
   },
   {
@@ -36,9 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setup logger with lib.setup_logger()\n"
+     ]
+    }
+   ],
    "source": [
     "# Enable auto-completion in the notebook. The different available functions in\n",
     "# the classes and their attributes should now appear while typing commands.\n",
@@ -58,11 +75,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "root - INFO : Logging started!\n",
+      "root - INFO : To see the log in a bash window use the following command:\n",
+      "root - INFO : tail -n +1 -f /home/gijs/Work/apercal/ipython-notebooks/tutorials/logs/0.log\n"
+     ]
+    }
+   ],
    "source": [
-    "lib.setup_logger('info', logfile='/home/{}/apercal/ipython-notebooks/tutorials/logs/0.log'.format(myusername));"
+    "_ = lib.setup_logger('info', logfile=here + '/logs/0.log')"
    ]
   },
   {
@@ -75,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,11 +120,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREPARE - INFO : ### Configuration file /home/gijs/Work/apercal/ipython-notebooks/tutorials/cfg/0.cfg successfully read! ###\n"
+     ]
+    }
+   ],
    "source": [
-    "prepare = apercal.prepare('/home/{}/apercal/ipython-notebooks/tutorials/cfg/0.cfg'.format(myusername))"
+    "prepare = apercal.prepare(config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'apercal_root' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-db1abc94ffc8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprepare\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapercaldir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mapercal_root\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprepare\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbasedir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mapercal_root\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'apercal_root' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "prepare.apercaldir = apercal_root\n",
+    "prepare.basedir = apercal_root"
    ]
   },
   {
@@ -206,6 +263,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from time import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "prepare.go()"
    ]
   },
@@ -222,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "convert = apercal.convert('/home/{}/apercal/ipython-notebooks/tutorials/cfg/0.cfg'.format(myusername))"
+    "convert = apercal.convert(config)"
    ]
   },
   {
@@ -486,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
